[gd_scene load_steps=3 format=3 uid="uid://brh1yknqh4ux6"]

[ext_resource type="Script" path="res://src/ui/components/auth/sign_in.gd" id="1_8ropt"]
[ext_resource type="PackedScene" uid="uid://buu3ox7iefpgx" path="res://src/ui/components/loading_spinner/loading_spinner.tscn" id="2_wwc6a"]

[node name="sign_in" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.972549)
script = ExtResource("1_8ropt")

[node name="Panel_Main" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -186.0
offset_top = -166.5
offset_right = 186.0
offset_bottom = 166.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer_Connect" type="VBoxContainer" parent="Panel_Main"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -159.0
offset_top = -121.0
offset_right = 159.0
offset_bottom = 121.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="Panel_Main/VBoxContainer_Connect"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Connect with an account to have a full experience and not miss your progress"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Button_SignIn" type="Button" parent="Panel_Main/VBoxContainer_Connect"]
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 20
text = "Sign In"

[node name="Button_Guest" type="Button" parent="Panel_Main/VBoxContainer_Connect"]
self_modulate = Color(1, 1, 1, 0.611765)
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 20
text = "Continue as a guest"

[node name="VBoxContainer_Waiting" type="VBoxContainer" parent="Panel_Main"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -159.0
offset_top = -121.0
offset_right = 159.0
offset_bottom = 121.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Label_Waiting" type="Label" parent="Panel_Main/VBoxContainer_Waiting"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1
autowrap_mode = 3

[node name="TextureProgressBar" parent="Panel_Main/VBoxContainer_Waiting" instance=ExtResource("2_wwc6a")]
layout_mode = 2
size_flags_horizontal = 4

[node name="Button_WaitingCancel" type="Button" parent="Panel_Main/VBoxContainer_Waiting"]
visible = false
layout_mode = 2
text = "Cancel"

[node name="VBoxContainer_GuestConfirm" type="VBoxContainer" parent="Panel_Main"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -159.0
offset_top = -121.0
offset_right = 159.0
offset_bottom = 121.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="Panel_Main/VBoxContainer_GuestConfirm"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Please be aware that utilizing a guest account imposes limitations on transactions, such as collecting wearables. Keep in mind that your progress will be lost upon logging out."
horizontal_alignment = 1
autowrap_mode = 3

[node name="Button_ConfirmGuestRisk" type="Button" parent="Panel_Main/VBoxContainer_GuestConfirm"]
layout_mode = 2
focus_mode = 0
text = "I assume the risk"

[node name="Button_RiskCancel" type="Button" parent="Panel_Main/VBoxContainer_GuestConfirm"]
layout_mode = 2
text = "Cancel"

[connection signal="pressed" from="Panel_Main/VBoxContainer_Connect/Button_SignIn" to="." method="_on_button_sign_in_pressed"]
[connection signal="pressed" from="Panel_Main/VBoxContainer_Connect/Button_Guest" to="." method="_on_button_guest_pressed"]
[connection signal="pressed" from="Panel_Main/VBoxContainer_Waiting/Button_WaitingCancel" to="." method="_on_button_waiting_cancel_pressed"]
[connection signal="pressed" from="Panel_Main/VBoxContainer_GuestConfirm/Button_ConfirmGuestRisk" to="." method="_on_button_confirm_guest_risk_pressed"]
[connection signal="pressed" from="Panel_Main/VBoxContainer_GuestConfirm/Button_RiskCancel" to="." method="_on_button_risk_cancel_pressed"]
